--- a/frontend/index.html
+++ b/frontend/index.html
@@ -224,7 +224,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="event-card shadow-sm rounded-lg overflow-hidden h-100 transition-hover bg-white">
                         <div class="project-image-wrapper" style="height: 200px; position: relative;">
-                            <img src="images/awards.jpg" alt="Guardians of Health 2.0" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="images/award.jpg" alt="Guardians of Health 2.0" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <div class="project-image-fallback" style="display: none; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); height: 100%; width: 100%; position: absolute; top: 0; left: 0; align-items: center; justify-content: center;">
                                 <i class="bi bi-heart-pulse-fill text-white" style="font-size: 48px;"></i>
                             </div>
