--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -49,7 +49,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100 shadow project-card">
                         <div class="project-image-wrapper">
-                            <img src="images/awards.jpg" alt="Guardians of Health 2.0" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="images/award.jpg" alt="Guardians of Health 2.0" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <div class="project-image-fallback" style="display: none; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
                                 <i class="bi bi-heart-pulse display-1 text-white"></i>
                             </div>
@@ -187,7 +187,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100 shadow project-card">
                         <div class="project-image-wrapper">
-                            <img src="images/disaster.jpg" alt="Disaster Relief Initiative" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="images/disasters.jpg" alt="Disaster Relief Initiative" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <div class="project-image-fallback" style="display: none; background: linear-gradient(135deg, #f7971e 0%, #ffd200 100%);">
                                 <i class="bi bi-shield-fill display-1 text-white"></i>
                             </div>
@@ -241,7 +241,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100 shadow project-card">
                         <div class="project-image-wrapper">
-                            <img src="images/environment.png" alt="Environmental Conservation" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="images/environments.png" alt="Environmental Conservation" class="img-fluid" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <div class="project-image-fallback" style="display: none; background: linear-gradient(135deg, #134e5e 0%, #71b280 100%);">
                                 <i class="bi bi-tree-fill display-1 text-white"></i>
                             </div>
